force-app/main/default/objects/Account_Plan__c/fields/Account_Plan_ID_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_ID_Match__c</fullName>
    <formula>IF( oppty_ID__c =  Account_ID__c , &quot;TRUE&quot;,
&quot;FALSE&quot;)</formula>
    <label>Account ID Match</label>
    <type>Text</type>
</CustomField>