force-app/main/default/objects/Account_Plan__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>TEXT(Account__r.Account_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>