force-app/main/default/objects/Account_Plan__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <inlineHelpText>Platinum &gt;1M; Gold $300K-$1M; Silver $75K-$300K; Bronze $25K-$75K; &lt;$25K no tier</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
                <label>Gold 🥇</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <label>Silver 🥈</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <label>Bronze 🥉</label>
            </value>
            <value>
                <fullName>No Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>