force-app/main/default/objects/Account_Plan__c/fields/Account_Tier_Image__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier_Image__c</fullName>
    <formula>TEXT( Account_Tier__c )&amp; &quot;&quot;
&amp;
IF(ISPICKVAL( Account_Tier__c , &quot;Missing Tier&quot;), &quot;⚠&quot;,
IF(ISPICKVAL( Account_Tier__c , &quot;Platinum&quot;), IMAGE(&quot;/resource/1666041304000/GraphicsPackNew/fatcow/farmfresh/32/award_star_bronze_3.png&quot;,&quot; &quot;),
IF(ISPICKVAL( Account_Tier__c , &quot;Gold&quot;), &quot;🥇&quot;,
IF(ISPICKVAL(  Account_Tier__c , &quot;Silver&quot;), &quot;🥈&quot;,
IF(ISPICKVAL(  Account_Tier__c , &quot;Bronze&quot;), &quot;🥉&quot;,
&quot;⚠&quot;)))))</formula>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>