force-app/main/default/objects/Account_Plan__c/fields/Approved_for_Claiming_Open_Market__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Claiming_Open_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If box is checked-marked means it is ok to call on. Unchecked means not ok to call on by Open Market</inlineHelpText>
    <label>Available for Calling On (Open Market)</label>
    <type>Checkbox</type>
</CustomField>