force-app/main/default/objects/Account_Plan__c/fields/Approved_for_Claiming_PXYZ_AIP__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Claiming_PXYZ_AIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Calling On (PXYZ AIP)</label>
    <type>Checkbox</type>
</CustomField>