force-app/main/default/objects/Account_Plan__c/fields/Approved_for_Claiming_Verity__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Claiming_Verity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Calling On (Verity)</label>
    <type>Checkbox</type>
</CustomField>