force-app/main/default/objects/Account_Plan__c/fields/Forecast_Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Target_Revenue__c</fullName>
    <label>Forecast Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>