force-app/main/default/objects/Account_Plan__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <inlineHelpText>What are the vital goals to achieve with this customer or prospect during the year.</inlineHelpText>
    <label>Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>