force-app/main/default/objects/Account_Plan__c/fields/Manager_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review_Comments__c</fullName>
    <label>Manager Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>