force-app/main/default/objects/Account_Plan__c/fields/Omni_Channel_Claim__c.field-meta.xml
<CustomField>
    <fullName>Omni_Channel_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Calling On (Omni Channel)</label>
    <type>Checkbox</type>
</CustomField>