force-app/main/default/objects/Account_Plan__c/fields/Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Won__c</fullName>
    <formula>Account__r.Opps_Won_TEMP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>