force-app/main/default/objects/Account_Plan__c/fields/Opportunity_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Snapshot</label>
    <referenceTo>Opportunity_Snapshot__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>