force-app/main/default/objects/Account_Plan__c/fields/oppty_ID__c.field-meta.xml
<CustomField>
    <fullName>oppty_ID__c</fullName>
    <formula>Account__r.Parent.X18_Digit_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>