force-app/main/default/objects/Account_Plan__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Partially Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>