force-app/main/default/objects/Account_Plan__c/fields/Owner_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Owner_Review_Comments__c</fullName>
    <label>Owner Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>