force-app/main/default/objects/Account_Plan__c/fields/Q1_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q1_Quota__c</fullName>
    <label>Q1 Quota</label>
    <summarizedField>Quota__c.Q1_Quota_Sales_Rep1__c</summarizedField>
    <summaryForeignKey>Quota__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>