force-app/main/default/objects/Account_Plan__c/fields/Q2_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q2_Quota__c</fullName>
    <label>Q2 Quota</label>
    <summarizedField>Quota__c.Q2_Quota__c</summarizedField>
    <summaryForeignKey>Quota__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>