force-app/main/default/objects/Account_Plan__c/fields/Revenue_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Lifetime__c</fullName>
    <formula>Account__r.Total_Revenue_Generated_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue (Lifetime)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>