force-app/main/default/objects/Account_Plan__c/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <formula>Q1_Quota__c +  Q2_Quota__c +  Q3_Quota__c + Q4_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value of Quotas for Sales Reps</inlineHelpText>
    <label>Sales Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>