force-app/main/default/objects/Account_Plan__c/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <label>Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>