force-app/main/default/objects/Account_Plan__c/fields/Short_Term_Plan__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Plan__c</fullName>
    <inlineHelpText>Steps to be taken over the 2 to 4 weeks</inlineHelpText>
    <label>Short Term Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>