force-app/main/default/objects/Account_Plan__c/fields/Stakeholder_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Management_Plan__c</fullName>
    <inlineHelpText>Identifies the critical people at the customer and describes how you will manage and develop those relationships.</inlineHelpText>
    <label>Stakeholder Management Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>