force-app/main/default/objects/Account_Plan__c/fields/Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Target_Achieved__c</fullName>
    <label>Target Achieved %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>