force-app/main/default/objects/Account_Plan__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <label>Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>