force-app/main/default/objects/Account_Plan__c/fields/Total_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_Pipeline__c</fullName>
    <formula>Account__r.Open_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>