force-app/main/default/objects/Account_Plan__c/fields/Total_Quota__c.field-meta.xml
<CustomField>
    <fullName>Total_Quota__c</fullName>
    <formula>Q1_Quota__c +  Q2_Quota__c  +  Q3_Quota__c  +  Q4_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>