force-app/main/default/objects/Account_Plan__c/fields/Weighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline__c</fullName>
    <inlineHelpText>The pipeline opportunities are multiplied by the probability.</inlineHelpText>
    <label>Weighted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>