force-app/main/default/objects/Account_Plan__c/fields/Weighted_Pipeline_as_of_Target__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline_as_of_Target__c</fullName>
    <label>Weighted Pipeline as % of Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>