force-app/main/default/objects/Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Active__c</columns>
    <columns>Account_Tier_Image__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>